# Hackstronauts_back

./: .env.example  .gitignore  README.md  main.py  main_render.py  pyproject.toml  render-env.txt  render.yaml  requirements-minimal.txt  requirements-render.txt  requirements.txt  setup_env.py  simulation_basic.json  simulation_technical.json  start_system.sh  test_simulation.py
src/: __init__.py
src/agents/: advanced_prediction_agent.py  base_agent.py  dashboard_agent.py  data_collector.py  data_collector_nasa.py  explainer_agent.py  impact_analyzer.py  mitigation_agent.py  ml_predictor.py  rag_agent.py  trajectory_agent.py  visualization_agent.py
src/api/: __init__.py
src/api/controllers/: analysis_controller.py  explanation_controller.py  metrics_controller.py  ml_prediction_controller.py  neo_controller.py  visualization_controller.py
src/api/models/: analysis_models.py  explanation_models.py  metrics_models.py  ml_prediction_models.py  neo_models.py  visualization_models.py
src/api/routes/: __init__.py  analysis_routes.py  explanation_routes.py  ingestor_routes.py  metrics_routes.py  ml_prediction_routes.py  nasa_routes.py  neo_routes.py  simulation_nasa_routes.py  simulation_routes.py  visualization_routes.py
src/database/: __init__.py  postgres_connector.py
src/graphs/: graph_agent.py
src/services/: data_ingestor.py  nasa_service.py
src/supervisors/: __init__.py  agent_supervisor.py  hybrid_supervisor.py  supervisor.py
src/validators/: base_validator.py  data_validator.py  physics_validator.py  rag_validator.py
